# Codryn

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  install.ps1  install.sh
.github/instructions/: codryn-mcp.instructions.md
.github/workflows/: ci.yml  release.yml
crates/codryn-bin/: Cargo.toml
crates/codryn-bin/src/: main.rs
crates/codryn-cli/: Cargo.toml
crates/codryn-cli/src/: doctor.rs  install.rs  lib.rs  update.rs  version.rs
crates/codryn-cypher/: Cargo.toml
crates/codryn-cypher/src/: executor.rs  lexer.rs  lib.rs  parser.rs
crates/codryn-discover/: Cargo.toml
crates/codryn-discover/src/: language.rs  lib.rs  userconfig.rs
crates/codryn-foundation/: Cargo.toml
crates/codryn-foundation/src/: arena.rs  complexity.rs  fqn.rs  lib.rs  minhash.rs  platform.rs  scope_matching.rs  str_intern.rs  str_util.rs
crates/codryn-graph-buffer/: Cargo.toml
crates/codryn-graph-buffer/src/: lib.rs
crates/codryn-mcp/: Cargo.toml
crates/codryn-mcp/src/: args.rs  helpers.rs  lib.rs  navigation_tools.rs
crates/codryn-pipeline/: Cargo.toml
crates/codryn-pipeline/src/: angular_adapter.rs  extraction.rs  go_adapter.rs  go_common.rs  jsx_framework.rs  lambda_cfn.rs  lib.rs  nextjs_routes.rs  passes.rs  registry.rs  spring_common.rs  spring_java.rs  spring_kotlin.rs  vue_adapter.rs  vue_sfc.rs
crates/codryn-services/: Cargo.toml
crates/codryn-services/src/: analytics.rs  architecture.rs  backend_flow.rs  flow.rs  lib.rs  navigation.rs  pipeline.rs  project_linking.rs  test_discovery.rs
crates/codryn-store/: Cargo.toml
crates/codryn-store/src/: analytics.rs  compressed_store.rs  edges.rs  lib.rs  nodes.rs  projects.rs  queries.rs  schema.rs  types.rs
crates/codryn-store/tests/: prop_tests.rs
crates/codryn-treesitter/: Cargo.toml
crates/codryn-treesitter/src/: bash_walker.rs  c_walker.rs  csharp_walker.rs  elixir_walker.rs  lib.rs  php_walker.rs  python_walker.rs  ruby_walker.rs  rust_walker.rs  scala_walker.rs  swift_walker.rs  ts_walker.rs
crates/codryn-ui/: Cargo.toml  build.rs
crates/codryn-ui/src/: lib.rs
crates/codryn-watcher/: Cargo.toml
crates/codryn-watcher/src/: lib.rs
docs/superpowers/plans/: 2026-04-18-graph-page-enhancement.md
docs/superpowers/specs/: 2026-04-18-graph-page-enhancement-design.md
tests/: install_sh_regression_test.sh
ui/: README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  vite.config.ts
ui/src/: App.tsx  index.css
ui/src/components/: PipelineDagView.tsx
ui/src/components/flow/: FlowSankeyView.tsx  OnboardingExtract.tsx  flowLane.ts  flowTypes.ts  sankeyModel.ts
ui/src/components/graph/canvas/: CanvasGraphView.tsx  camera.ts  hitTest.ts  layout.ts  render.ts
ui/src/components/projects/: ProjectAvatar.tsx  ProjectCard.tsx  ProjectRelationshipCanvas.tsx  shared.ts
ui/src/components/ui/: badge.tsx  button.tsx  input.tsx  navigation-menu.tsx  select.tsx  tabs.tsx
ui/src/lib/: rpc.ts  types.ts
ui/src/pages/: AnalyticsPage.tsx  ConfigPage.tsx  GraphPage.tsx  ProjectsPage.tsx
