[package]
name = "codryn-bin"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "codryn"
path = "src/main.rs"

[dependencies]
codryn-foundation.workspace = true
codryn-store.workspace = true
codryn-pipeline.workspace = true
codryn-mcp.workspace = true
codryn-cli.workspace = true
codryn-ui.workspace = true
codryn-watcher.workspace = true
rmcp.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
serde_json.workspace = true
