[package]
name = "codryn-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
codryn-foundation.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
ureq.workspace = true
flate2.workspace = true
tar.workspace = true
