[package]
name = "codryn-cypher"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
codryn-store.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
regex.workspace = true
rusqlite.workspace = true
