[package]
name = "codryn-discover"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
codryn-foundation.workspace = true
ignore.workspace = true
anyhow.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
dirs.workspace = true

[dev-dependencies]
tempfile = "3"
proptest = "1"
