[package]
name = "codryn-foundation"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tracing.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
lz4_flex.workspace = true
sha2.workspace = true
hex.workspace = true
chrono.workspace = true
