[package]
name = "codryn-pipeline"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
codryn-foundation.workspace = true
codryn-store.workspace = true
codryn-discover.workspace = true
codryn-graph-buffer.workspace = true
anyhow.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tree-sitter.workspace = true
tree-sitter-java.workspace = true
tree-sitter-kotlin-ng.workspace = true
tree-sitter-language.workspace = true
aho-corasick.workspace = true
rayon.workspace = true
regex.workspace = true
sha2.workspace = true
hex.workspace = true
chrono.workspace = true

[dependencies.git2]
workspace = true
optional = true

[features]
default = []
git-history = ["git2"]

[dev-dependencies]
tempfile = "3"
