[package]
name = "codryn-store"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
codryn-foundation.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
anyhow.workspace = true
thiserror.workspace = true
regex.workspace = true
chrono.workspace = true

[dev-dependencies]
proptest = "1"
