[package]
name = "codryn-treesitter"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
codryn-discover.workspace = true
tracing.workspace = true
tree-sitter.workspace = true
tree-sitter-language.workspace = true
tree-sitter-typescript.workspace = true
tree-sitter-javascript.workspace = true
tree-sitter-python.workspace = true
tree-sitter-rust.workspace = true
tree-sitter-c.workspace = true
tree-sitter-cpp.workspace = true
tree-sitter-c-sharp.workspace = true
tree-sitter-ruby.workspace = true
tree-sitter-php.workspace = true
tree-sitter-swift.workspace = true
tree-sitter-scala.workspace = true
tree-sitter-elixir.workspace = true
tree-sitter-bash.workspace = true
