[package]
name = "codryn-ui"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
codryn-store.workspace = true
codryn-cypher.workspace = true
codryn-cli.workspace = true
codryn-foundation.workspace = true
codryn-pipeline.workspace = true
codryn-services.workspace = true
axum.workspace = true
tower-http.workspace = true
rust-embed.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
anyhow.workspace = true
mime_guess = "2"
