[package]
name = "codryn-watcher"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
codryn-pipeline.workspace = true
codryn-store.workspace = true
notify.workspace = true
notify-debouncer-mini.workspace = true
tracing.workspace = true
anyhow.workspace = true

[dev-dependencies]
tempfile = "3"
